pure css and flux Dispatcher

--- a/app/css/application.css.scss
+++ b/app/css/application.css.scss
@@ -1,10 +1,1 @@
-//= require vendor/normalize
-
-html, body{
-	background: #eee;
-  margin:0;
-	color:#666;
-	font-family: "Helvetica";
-	font-size: 16px;
-}
-
+//= require_tree vendor
