--- a/app/index.jade
+++ b/app/index.jade
@@ -2,6 +2,7 @@ doctype html
 html(lang="en")
   head
     title= pageTitle
+    meta(name="viewport", content="width=device-width, initial-scale=1")
     link(rel="stylesheet", href="assets/application.css")
   body
     #fretboard
